--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,5 +8,7 @@
 <body>
     <h1 style="font-size: 36px;"    >Hello From Mars</h1>
     <p  style='font-size: 24px;'   ><b><i>I need a spaceship</i></b></p>
+    <img src="{% static 'mars44.jpg' %}" alt="Mars Planet" width="500" height="500">
+
 </body>
 </html>
